--- a/dns-proxy/package.json
+++ b/dns-proxy/package.json
@@ -17,13 +17,12 @@
   "dependencies": {
     "dns-packet": "^5.6.1",
     "express": "^5.1.0",
-    "pg": "^8.13.1",
+    "prom-client": "^15.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^20.11.24",
-    "@types/pg": "^8.11.10",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^3.1.3"
