--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -14,3 +14,7 @@ scrape_configs:
   - job_name: 'otel-collector'
     static_configs:
       - targets: ['otel-collector:8889']
+
+  - job_name: 'dns-proxy'
+    static_configs:
+      - targets: ['dns-proxy:3001']
