--- a/dns-proxy/package.json
+++ b/dns-proxy/package.json
@@ -2,14 +2,14 @@
   "name": "dns-proxy",
   "version": "1.0.0",
   "description": "DNS proxy with JSON output support",
-  "main": "dist/server.js",
+  "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "tsx watch --env-file-if-exists=.env src/server.ts",
-    "start:webhook": "tsx watch src/webhook-server.ts",
+    "start": "node --env-file-if-exists=.env --watch src/server.ts",
+    "start:webhook": "node --watch src/webhook-server.ts",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "blocklist:download": "curl -o ../config/blocklist.txt https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt"
@@ -23,7 +23,6 @@
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^20.11.24",
-    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^3.1.3"
   }
