--- a/vpn-toggle/package.json
+++ b/vpn-toggle/package.json
@@ -3,20 +3,18 @@
   "version": "1.0.0",
   "description": "Simple VPN toggle UI for device users",
   "type": "module",
-  "main": "./dist/server.js",
+  "main": "./src/server.ts",
   "scripts": {
-    "build": "tsc && cp -r src/views dist/views",
-    "start": "tsx --env-file-if-exists=.env  --watch src/server.ts",
-    "start:prod": "node dist/server.js"
+    "start": "node --env-file-if-exists=.env --watch src/server.ts",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "express": "^5.1.0",
-    "pug": "^3.0.3",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "pug": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
-    "@types/node": "^22.15.17"
+    "@types/node": "^22.15.17",
+    "typescript": "^5.8.3"
   }
 }
