subcalendars by prefix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -150,6 +150,11 @@ services:
       - CALENDAR_IDS=FAMILY
       - CALENDAR_CONFIG_FAMILY_NAME=Семья
       - CALENDAR_CONFIG_FAMILY_COLOR=#FF383C
+      - SUBCALENDAR_IDS=VASYA,LEV
+      - SUBCALENDAR_VASYA_NAME=Вася
+      - SUBCALENDAR_VASYA_COLOR=#FF69B4
+      - SUBCALENDAR_LEV_NAME=Лев
+      - SUBCALENDAR_LEV_COLOR=#B469FF
     networks:
       - default
       - shared
