--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -155,6 +155,11 @@ services:
       - SUBCALENDAR_VASYA_COLOR=#FF69B4
       - SUBCALENDAR_LEV_NAME=Лев
       - SUBCALENDAR_LEV_COLOR=#B469FF
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:3003/health"]
+      interval: 1s
+      timeout: 1s
+      retries: 5
     networks:
       - default
       - shared
