--- a/dns-proxy/package.json
+++ b/dns-proxy/package.json
@@ -2,12 +2,11 @@
   "name": "dns-proxy",
   "version": "1.0.0",
   "description": "DNS proxy with JSON output support",
-  "main": "dist/server.js",
+  "main": "./src/server.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "tsx watch --env-file-if-exists=.env src/server.ts",
-    "start:webhook": "tsx watch src/webhook-server.ts",
+    "start": "node --env-file-if-exists=.env --watch src/server.ts",
+    "typecheck": "tsc --noEmit",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts",
@@ -23,7 +22,6 @@
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^20.11.24",
-    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
     "vitest": "^3.1.3"
   }
