main: convert to typestripping

--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -1,33 +1,19 @@
-# Stage 1: Build the application
-FROM node:24 AS builder
+FROM node:24-alpine
 
-WORKDIR /usr/app
+WORKDIR /app
 
-
-# Install pnpm
 RUN npm install -g pnpm@10
 
-# Install dependencies
-COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
-RUN pnpm install
+COPY package.json pnpm-lock.yaml tsconfig.json ./
+RUN pnpm install --frozen-lockfile
 
-# Copy source code and tsconfig
-COPY tsconfig.json ./
 COPY src ./src
-
-RUN pnpm run build
-
-# Remove dev dependencies
-RUN pnpm install --prod
-
-# Stage 2: Production image
-FROM node:24-slim
-
-WORKDIR /usr/app
-
-COPY --from=builder /usr/app/node_modules ./node_modules
-COPY --from=builder /usr/app/dist ./dist
 COPY migrations ./migrations
 
-# Command to run the application
-CMD ["node", "dist/main.js"]
+# Fail build if TypeScript has errors
+RUN pnpm run typecheck
+
+# Remove dev deps for smaller image
+RUN pnpm prune --prod
+
+CMD ["node", "src/main.ts"]
