--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -18,3 +18,7 @@ scrape_configs:
   - job_name: 'dns-proxy'
     static_configs:
       - targets: ['dns-proxy:3001']
+
+  - job_name: 'keenetic-exporter'
+    static_configs:
+      - targets: ['keenetic-exporter:9101']
