add default VPN interface option for services
Allows selecting "default" interface which resolves to DEFAULT_VPN_INTERFACE
env var. Shows the configured default in the UI dropdown.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,7 @@ services:
       - KEENETIC_LOGIN=${KEENETIC_LOGIN}
       - KEENETIC_PASSWORD=${KEENETIC_PASSWORD}
       - DNS_API_URL=http://dns-proxy:3001
+      - DEFAULT_VPN_INTERFACE=lithuania
     networks:
       - default
       - shared
