--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -242,6 +242,7 @@ services:
       - '--path.sysfs=/host/sys'
       - '--path.rootfs=/rootfs'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+      - '--collector.hwmon'
     restart: unless-stopped
 
   otel-collector:
