Add torrent-ui service for simple torrent management
- Minimal UI for family use to upload .torrent files or magnet links
- View download progress with auto-polling updates every 3s
- Delete torrents from the list
- Rose theme matching other homelab services
- Accessible at dl.internal via Traefik
- Added link to family dashboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -389,6 +389,26 @@ services:
       - "traefik.docker.network=shared"
     restart: unless-stopped
 
+  torrent-ui:
+    container_name: torrent-ui
+    build:
+      context: ./torrent-ui
+    environment:
+      - PORT=3007
+      - QBITTORRENT_URL=http://qbittorrent:8080
+    depends_on:
+      - qbittorrent
+    networks:
+      - default
+      - shared
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.torrent-ui.rule=Host(`dl.internal`)"
+      - "traefik.http.routers.torrent-ui.entrypoints=web"
+      - "traefik.http.services.torrent-ui.loadbalancer.server.port=3007"
+      - "traefik.docker.network=shared"
+    restart: unless-stopped
+
 networks:
   shared:
     name: shared
