torrent-ui: Add path fixing and folder organization
- Add move buttons to organize torrents into tv-shows/movies
- Add "fix paths" button to batch rename all torrent folders
- Single season: moves to show folder, renames content to "Season XX"
- Multi-season: renames root to show name, subfolders to "Season XX"
- Display trimmed torrent names and folder structure
- Add free space display and progress polling
- Faster healthcheck for quicker container detection

--- a/torrent-ui/package.json
+++ b/torrent-ui/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node --env-file-if-exists=.env --watch src/server.ts",
     "start:prod": "node src/server.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "express": "^5.0.1",
@@ -17,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^4.0.18"
   }
 }
