--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -421,6 +421,8 @@ services:
       - PORT=3007
       - QBITTORRENT_URL=http://qbittorrent:8080
       - KEENETIC_API_URL=http://keenetic-api:3005
+      - RUTRACKER_COOKIE=${RUTRACKER_COOKIE}
+    dns: [192.168.80.53]
     depends_on:
       - qbittorrent
       - keenetic-api
