--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -373,7 +373,7 @@ services:
       - WEBUI_PORT=8080
     volumes:
       - ./qbittorrent/config:/config
-      - /home/kroleg/data/media:/media
+      - /mnt/data/media:/media
     ports:
       - "6881:6881"
       - "6881:6881/udp"
@@ -401,7 +401,7 @@ services:
     volumes:
       - ./jellyfin/config:/config
       - ./jellyfin/cache:/cache
-      - /home/kroleg/data/media:/media:ro
+      - /mnt/data/media:/media:ro
     networks:
       - default
       - shared
