grafana: Add Telegram alerting for system monitoring
- HDD temperature > 55°C
- CPU temperature > 80°C
- CPU usage > 40%
- RAM available < 2GB
- Disk / free < 30GB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -284,6 +284,7 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
     volumes:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning:ro
