torrent-ui: Add download limit for non-admin users
- Add configurable limit via USER_DOWNLOAD_LIMIT_GB (100GB)
- Show warning when limit exceeded, hide add buttons
- Display remaining limit for non-admins instead of disk free space
- Admins unaffected, still see total free space

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -423,6 +423,7 @@ services:
       - QBITTORRENT_URL=http://qbittorrent:8080
       - KEENETIC_API_URL=http://keenetic-api:3005
       - RUTRACKER_COOKIE=${RUTRACKER_COOKIE}
+      - USER_DOWNLOAD_LIMIT_GB=100
     dns: [192.168.80.53]
     depends_on:
       - qbittorrent
