--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -459,6 +459,8 @@ services:
       - /sys:/host/sys:ro
       - /proc:/host/proc:ro
       - /:/rootfs:ro
+    ports:
+      - "3008:3008"
     networks:
       - default
       - shared
