family-dashboard: Add admin-only section with infrastructure links
Show Grafana, Admin panel, Glance, Disk Monitor, qBittorrent, and
Page Watcher links only to admin users. Uses keenetic-api for
IP-based user identification.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,8 +166,11 @@ services:
     build:
       context: ./family-dashboard
       dockerfile: Dockerfile
+    depends_on:
+      - keenetic-api
     environment:
       - PORT=3006
+      - KEENETIC_API_URL=http://keenetic-api:3005
     networks:
       - default
       - shared
