telegram-bot: Add Docker container management commands
Add commands to list, start, stop, and restart Docker containers:
- /docker_ps - List all containers with uptime
- /docker_start [name] - Start a container
- /docker_stop [name] - Stop a container
- /docker_restart [name] - Restart a container

Features:
- Partial name matching for container actions
- Authorization check against TELEGRAM_CHAT_ID
- Self-protection (cannot stop/restart telegram-bot)
- Inline keyboard buttons for selection when multiple matches

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -462,6 +462,7 @@ services:
       - /sys:/host/sys:ro
       - /proc:/host/proc:ro
       - /:/rootfs:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     ports:
       - "3008:3008"
     networks:
