vpn-toggle: Add admin-only policies and require registration
- Hide configurable policies from non-admin users (ADMIN_ONLY_POLICIES env)
- Block unregistered devices with 403 forbidden error
- Add keenetic-api integration for admin status checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,12 +135,15 @@ services:
     container_name: vpn-toggle
     depends_on:
       - dns-to-vpn
+      - keenetic-api
     build:
       context: ./vpn-toggle
       dockerfile: Dockerfile
     environment:
       - PORT=3002
       - MAIN_API_URL=http://dns-to-vpn:3000/api
+      - KEENETIC_API_URL=http://keenetic-api:3005
+      - ADMIN_ONLY_POLICIES=kz
     networks:
       - default
       - shared
