--- a/devices/package.json
+++ b/devices/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "parental-controls",
+  "name": "devices",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node --env-file-if-exists=.env --watch src/server.ts",
     "start:prod": "node src/server.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "drizzle-orm": "^0.38.3",
     "express": "^5",
+    "pg": "^8.13.1",
     "pug": "^3.0.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
+    "@types/pg": "^8.11.10",
+    "drizzle-kit": "^0.30.1",
     "typescript": "^5.7.3"
   }
 }
