--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,14 +135,14 @@ services:
     container_name: vpn-toggle
     depends_on:
       - dns-to-vpn
-      - keenetic-api
+      - devices
     build:
       context: ./vpn-toggle
       dockerfile: Dockerfile
     environment:
       - PORT=3002
       - MAIN_API_URL=http://dns-to-vpn:3000/api
-      - KEENETIC_API_URL=http://keenetic-api:3005
+      - DEVICES_API_URL=http://devices:3009
       - ADMIN_ONLY_POLICIES=kz
     networks:
       - default
@@ -170,10 +170,10 @@ services:
       context: ./family-dashboard
       dockerfile: Dockerfile
     depends_on:
-      - keenetic-api
+      - devices
     environment:
       - PORT=3006
-      - KEENETIC_API_URL=http://keenetic-api:3005
+      - DEVICES_API_URL=http://devices:3009
     networks:
       - default
       - shared
@@ -208,12 +208,6 @@ services:
       - KEENETIC_LOGIN=${KEENETIC_LOGIN}
       - KEENETIC_PASSWORD=${KEENETIC_PASSWORD}
       - PORT=3005
-      - PROFILE_IDS=VITALIY,LEV,POLYA,MARINA
-      - PROFILE_VITALIY_NAME=Виталя
-      - PROFILE_VITALIY_ADMIN=true
-      - PROFILE_LEV_NAME=Лев
-      - PROFILE_POLYA_NAME=Поля
-      - PROFILE_MARINA_NAME=Марина
     restart: unless-stopped
 
   calendar:
@@ -432,13 +426,13 @@ services:
     environment:
       - PORT=3007
       - QBITTORRENT_URL=http://qbittorrent:8080
-      - KEENETIC_API_URL=http://keenetic-api:3005
+      - DEVICES_API_URL=http://devices:3009
       - RUTRACKER_COOKIE=${RUTRACKER_COOKIE}
       - USER_DOWNLOAD_LIMIT_GB=100
     dns: [192.168.80.53]
     depends_on:
       - qbittorrent
-      - keenetic-api
+      - devices
     networks:
       - default
       - shared
