Add Tailscale remote access support
- Add tailscale_ip column to devices table for identifying remote users
- Add lookupByIp() helper to handle both Tailscale and local IP lookups
- Change Traefik to host network mode to see real client IPs
- Update traefik/dynamic.yml backends to use 127.0.0.1
- Add ADR documenting the setup and its impact on services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,11 @@ services:
       - "--providers.file.filename=/etc/traefik/dynamic.yml"
       - "--providers.file.watch=true"
       - "--entrypoints.web.address=:80"
-    ports:
-      - "80:80"
-      - "8080:8080"
+    network_mode: host
     restart: unless-stopped
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./traefik/dynamic.yml:/etc/traefik/dynamic.yml:ro
-    networks:
-      - default
-      - shared
 
   glance:
     container_name: glance
