Improve calendar health check timing
- Reduce interval from 30s to 10s
- Add 5s start_period to reduce 404 window after restarts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -202,9 +202,10 @@ services:
       - SUBCALENDAR_LEV_COLOR=#B469FF
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:3003/health"]
-      interval: 30s
+      interval: 10s
       timeout: 5s
       retries: 3
+      start_period: 5s
     networks:
       - default
       - shared
