calendar: Add Поля and Кирилл sub-calendars, update colors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -194,12 +194,16 @@ services:
       - CACHE_TTL_MINUTES=5
       - CALENDAR_IDS=FAMILY
       - CALENDAR_CONFIG_FAMILY_NAME=Семья
-      - CALENDAR_CONFIG_FAMILY_COLOR=#FF383C
-      - SUBCALENDAR_IDS=VASYA,LEV
+      - CALENDAR_CONFIG_FAMILY_COLOR=#6b7280
+      - SUBCALENDAR_IDS=VASYA,LEV,POLYA,KIRILL
       - SUBCALENDAR_VASYA_NAME=Вася
       - SUBCALENDAR_VASYA_COLOR=#FF69B4
       - SUBCALENDAR_LEV_NAME=Лев
       - SUBCALENDAR_LEV_COLOR=#B469FF
+      - SUBCALENDAR_POLYA_NAME=Поля
+      - SUBCALENDAR_POLYA_COLOR=#e74c3c
+      - SUBCALENDAR_KIRILL_NAME=Кирилл
+      - SUBCALENDAR_KIRILL_COLOR=#69B4FF
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:3003/health"]
       interval: 10s
