calendar: Add multiple prefix aliases and multi-person support
- Support comma-separated aliases in NAME: Лев,Лева
- Support multiple persons in event: "Лева и Поля: Event"
- Add Лева alias for Лев sub-calendar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -198,7 +198,7 @@ services:
       - SUBCALENDAR_IDS=VASYA,LEV,POLYA,KIRILL
       - SUBCALENDAR_VASYA_NAME=Вася
       - SUBCALENDAR_VASYA_COLOR=#FF69B4
-      - SUBCALENDAR_LEV_NAME=Лев
+      - SUBCALENDAR_LEV_NAME=Лев,Лева
       - SUBCALENDAR_LEV_COLOR=#B469FF
       - SUBCALENDAR_POLYA_NAME=Поля
       - SUBCALENDAR_POLYA_COLOR=#e74c3c
