main: Migrate dns-to-vpn to use keenetic-api service
Refactor main service to use keenetic-api HTTP endpoints instead of
direct router communication. This centralizes Keenetic router access
in a single service.

Changes:
- Add route/interface endpoints to keenetic-api (GET/POST/DELETE routes,
  GET interfaces, resolve interface names)
- Create HTTP client in main/src/services/keenetic-client.ts
- Update main service to use KEENETIC_API_URL instead of direct creds
- Remove main/src/keenetic-api.ts (moved to keenetic-api service)
- Update docker-compose: dns-to-vpn depends on keenetic-api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
         condition: service_healthy
       dns-proxy:
         condition: service_started
+      keenetic-api:
+        condition: service_started
     build:
       context: ./main
       dockerfile: Dockerfile
@@ -52,9 +54,7 @@ services:
       - POSTGRES_DB=dns2vpn
       - POSTGRES_USER=dns2vpn
       - POSTGRES_PASSWORD=dns2vpn
-      - KEENETIC_HOST=${KEENETIC_HOST}
-      - KEENETIC_LOGIN=${KEENETIC_LOGIN}
-      - KEENETIC_PASSWORD=${KEENETIC_PASSWORD}
+      - KEENETIC_API_URL=http://keenetic-api:3005
       - DNS_API_URL=http://dns-proxy:3001
       - DEFAULT_VPN_INTERFACE=lithuania
     networks:
@@ -180,6 +180,7 @@ services:
       - KEENETIC_LOGIN=${KEENETIC_LOGIN}
       - KEENETIC_PASSWORD=${KEENETIC_PASSWORD}
       - PORT=3005
+      - DEFAULT_VPN_INTERFACE=lithuania
     restart: unless-stopped
 
   calendar:
