keenetic-api: Add session keep-alive ping
Adds configurable periodic ping to prevent router session expiration.
Default interval is 5 minutes, configurable via PING_INTERVAL_MS env var.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,6 +181,7 @@ services:
       - KEENETIC_PASSWORD=${KEENETIC_PASSWORD}
       - PORT=3005
       - DEFAULT_VPN_INTERFACE=lithuania
+      - PING_INTERVAL_MINUTES=4
     restart: unless-stopped
 
   calendar:
